--- a/jasonbrazeal_com/assets/css/shared.css
+++ b/jasonbrazeal_com/assets/css/shared.css
@@ -66,7 +66,7 @@ hr {
 }
 
 .zIndexFront {
-  z-index: 1000;
+  z-index: 100;
 }
 
 .zIndexBehind {
@@ -75,10 +75,12 @@ hr {
 
 .slidIn {
   top: 0px;
+  z-index: 101;
 }
 
 .slidOut {
   top: 4000px;
+  z-index: -2;
 }
 
 body, :global(.app) {
